Finishing cleaning of how EventsFactory bean is handled.